[package]
name = "apikeycli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_identity = "0.11"
azure_security_keyvault = "0.11"
azure_core = "0.11"
clap = { version = "4.2", default-features = false, features = ["std","derive","color","help","suggestions","usage"] }
rand = "0.8"
tokio = { version = "1" , features = ["full"]}
rusqlite = { version = "0.29", features = ["bundled"] }
dioxus = "0.3"
dioxus-desktop = "0.3"
